@@ -5,6 +5,7 @@ Changes since Eet 1.6.0:
 
 Fixes:
     * Force destruction of all pending file when shuting down eet.
+    * Make eet_dictionary thread safe.
 
 Eet 1.6.0
 
